src/objects/Comprehensive_Assessment__c.object
<CustomObject>
    <fields>
        <fullName>Goals_re_recreational_activities_LT_2__c</fullName>
        <inlineHelpText>Recreational activities / hobbies: Please identify what goals you may have in the  long term</inlineHelpText>
        <label>Goals re recreational activities LT 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HIV_test__c</fullName>
        <label>HIV test</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Have_a_medical_card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have a medical card?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_any_concerns_about_contraception__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any concerns about contraception?</inlineHelpText>
        <label>Have any concerns about contraception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_any_financial_issues_concerns__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you currently have any financial issues/ concerns?</inlineHelpText>
        <label>Have any financial issues/concerns?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_any_specific_employment_interests__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any specific employment interests or areas of employment that you would like to pursue?</inlineHelpText>
        <label>Have any specific employment interests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_difficulties_to_live_independently__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think that there is anything that impacts/ would impact on your capacity to live independently? (E.g. disabilities, mental health problems, etc)</inlineHelpText>
        <label>Have difficulties to live independently</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_been_treated_for__c</fullName>
        <inlineHelpText>What are you/ have you been treated for, if known: (your diagnosis)</inlineHelpText>
        <label>Have you been treated for</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_on_a_CE_scheme__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you ever been on a CE scheme?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_ever_experienced_homelessness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you ever experienced homelessness?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Have_you_worked_in_the_past__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have you worked in the past?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hepatitis_B_test__c</fullName>
        <label>Hepatitis B test</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hepatitis_C_test__c</fullName>
        <label>Hepatitis C test</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Highest_level_of_education__c</fullName>
        <inlineHelpText>What is the highest level of education you have attained? (E.g. primary level, secondary level, third level, special needs education, etc</inlineHelpText>
        <label>Highest level of education</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hobbies_Recreational_Activities_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Hobbies &amp; Recreational Activities-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Homeless_registered_with_Local_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If you are currently homeless are you registered with a Local Authority</inlineHelpText>
        <label>Homeless registered with Local Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_of_day_work_college_training__c</fullName>
        <label>Hours of day (work/ college/ training)</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_difficult_did_you_find_it_to_stop__c</fullName>
        <inlineHelpText>How difficult did you find it to stop or go without prefernce substance?
0 = Not difficult
1 = Quite difficult
2 = Very difficult
3 = Impossible</inlineHelpText>
        <label>How difficult did you find it to stop?</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Identify_ways_to_overcome_difficulties__c</fullName>
        <inlineHelpText>Can you identify ways to overcome these difficulties?</inlineHelpText>
        <label>Identify ways to overcome difficulties?</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_child_1_not_with_you_who_with__c</fullName>
        <inlineHelpText>If this child does not live with you who do they live with</inlineHelpText>
        <label>If child 1 not with you, who with?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_child_2_not_with_you_who_with__c</fullName>
        <inlineHelpText>If this child does not live with you who do they live with</inlineHelpText>
        <label>If child 2 not with you, who with?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_child_3_not_with_you_who_with__c</fullName>
        <inlineHelpText>If this child does not live with you who do they live with</inlineHelpText>
        <label>If child 3 not with you, who with?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_help_received_re_alcohol_where_when__c</fullName>
        <inlineHelpText>If yes, please state where and when you received this help/ treatment:</inlineHelpText>
        <label>If help received re alcohol where &amp; when</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_help_received_re_drug_where_when__c</fullName>
        <inlineHelpText>If yes please state where and when you received this help/ treatment:</inlineHelpText>
        <label>If help received re drug, where &amp; when</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_no_how_do_you_finance_your_AE__c</fullName>
        <inlineHelpText>If ‘no’ how do you finance your additional expenditure?</inlineHelpText>
        <label>If ‘no’ how do you finance your AE</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_no_would_you_like_a_smear_test_taken__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ‘no’ would you like to have a smear test taken?</inlineHelpText>
        <label>If no would you like a smear test taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_received_a_positive_BBV_specify__c</fullName>
        <inlineHelpText>If you received a positive Blood Bourne Virus (BBV) test result did you received any treatment? Please give details:</inlineHelpText>
        <label>If received a positive BBV, specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Accomodation_difficulty_specify__c</fullName>
        <inlineHelpText>Do you currently have any concerns or difficulties with your accommodation or living arrangements?  If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (Accomodation difficulty) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_CE_scheme_details__c</fullName>
        <inlineHelpText>Have you ever been on a CE scheme? If ‘yes’ can you give details of when this was and where?</inlineHelpText>
        <label>If yes (CE scheme) details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Drug_Alco_impacted_Acco_specify__c</fullName>
        <inlineHelpText>Do you think that your drug/ alcohol use has impacted on your accommodation and living arrangements? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (Drug/Alco impacted Acco) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Drug_alco_use_LI_specify__c</fullName>
        <inlineHelpText>Do you think there is a connection between your drug/alcohol use and your legal issues?  If ‘yes’ please give details:</inlineHelpText>
        <label>If yes(Drug/alco use - LI) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Financial_concerns_specify__c</fullName>
        <inlineHelpText>Do you currently have any financial issues/ concerns? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (Financial concerns) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_LD_like_to_address_these_needs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you have any literacy, numeracy or learning difficulty needs? If ‘yes’ would you like to address these needs?</inlineHelpText>
        <label>If yes (LD) like to address these needs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_yes_Legal_issues_specify__c</fullName>
        <inlineHelpText>Do you currently have any concerns about legal issues? If ‘yes’ can you give me details?</inlineHelpText>
        <label>If yes (Legal issues) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Maintaining_Home_specify__c</fullName>
        <inlineHelpText>Is there anything about running or maintaining a home that you are concerned about or think you might need help with? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes(Maintaining Home) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_agency_assisting_LI_specify__c</fullName>
        <inlineHelpText>Are you currently involved with an agency or individual who is assisting you with you legal issues? (E.g. solicitor, probation service/ officer, Citizen’s Advice Bureau) If ‘yes’ please</inlineHelpText>
        <label>If yes (agency assisting LI) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_are_you_aware_of_results_specify__c</fullName>
        <inlineHelpText>If ‘yes’ to any of the indicated test are you aware of the test results? Please give details:</inlineHelpText>
        <label>If yes are you aware of results, specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_assistance_child_H_specify__c</fullName>
        <inlineHelpText>Have you ever received assistance from any service/ agency to help you with your children’s health, welfare or development? If ‘yes’ please give details</inlineHelpText>
        <label>If yes (assistance child H) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_attempted_suicide_please_specif__c</fullName>
        <inlineHelpText>Have you ever considered or attempted suicide? If ‘yes’ can you give me more details?</inlineHelpText>
        <label>If yes (attempted suicide) please specif</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_aware_addressing_subs_use_speci__c</fullName>
        <inlineHelpText>Are any of your family members (including your spouse/ partner) aware that you are trying to address your substance use? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (aware/addressing subs use) speci</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_change_employment_specify__c</fullName>
        <label>If yes (change employment) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_concern_re_contraception_specif__c</fullName>
        <inlineHelpText>Do you have any concerns about contraception?, If ‘yes’ please give details?</inlineHelpText>
        <label>If yes (concern re contraception) specif</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_concerns_children_health_specif__c</fullName>
        <inlineHelpText>Do you have any concerns about your children’s health, welfare or development? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (concerns children health) specif</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_convicted_prison_specify__c</fullName>
        <inlineHelpText>Have you in the past ever been:
Charged with an offence? Been convicted of an offence? Received a prison sentence?</inlineHelpText>
        <label>If yes (convicted/prison) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_counsellor_the_most_useful__c</fullName>
        <inlineHelpText>If ‘yes’ what do/ did you find most useful about this help/ treatment?</inlineHelpText>
        <label>If yes (counsellor) the most useful</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_cultural_ethnic_custom_specify__c</fullName>
        <inlineHelpText>Do you have any cultural or ethnic customs or practices that you think we should know about while we are delivering a service to you. If ‘yes’ please outline what they are:</inlineHelpText>
        <label>If yes (cultural, ethnic custom) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_debts_have_a_plan_of_payments__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If ‘yes’ do you have a plan to manage the payments of your debts?</inlineHelpText>
        <label>If yes (debts) have a plan of payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_yes_dental_needs_please_give_detail__c</fullName>
        <inlineHelpText>Do you have any dental health needs?, If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (dental needs) please give detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_drug_alco_money_issue_specify__c</fullName>
        <inlineHelpText>Do you think that your drug/ alcohol use contributes to your financial issues/ concerns (if applicable)?  If ‘yes’ please give details</inlineHelpText>
        <label>If yes (drug/alco money issue) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_drug_alcohol_use_impact_specify__c</fullName>
        <inlineHelpText>Do you think that your drug/ alcohol use has impacted on your relationships? If ‘yes’ in what ways?</inlineHelpText>
        <label>If yes (drug/alcohol use impact) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_edu_training_areas_of_interest__c</fullName>
        <inlineHelpText>If ‘yes’ what are your areas of interest or what particular skills you would like to learn?</inlineHelpText>
        <label>If yes (edu/training) areas of interest</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_family_aware_of_subs_use_specif__c</fullName>
        <inlineHelpText>Are any of your family members (including your spouse/ partner) aware of your substance use? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (family aware of subs use) specif</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_family_mental_health_specify__c</fullName>
        <inlineHelpText>Are you aware of any family history of mental health problems? If ‘yes’ please give details</inlineHelpText>
        <label>If yes (family mental health) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_family_support_specify__c</fullName>
        <inlineHelpText>Do you think that your family members or friends would support you in addressing your substance use?  
If ‘yes’ who do you think would support you and in what ways?</inlineHelpText>
        <label>If yes (family support) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_hobbies_benefits_life_specify__c</fullName>
        <inlineHelpText>Do you think that involvement in recreational activities or hobbies benefits, or would benefit, you and your life? If ‘yes’ in what ways?</inlineHelpText>
        <label>If yes (hobbies benefits life) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_homelessness_specify__c</fullName>
        <label>If yes (homelessness) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_please_specify_DLI__c</fullName>
        <inlineHelpText>Do you think that there is anything that impacts/ would impact on your capacity to live independently? (E.g. disabilities, mental health problems, etc), If’ yes, please give details:</inlineHelpText>
        <label>If yes please specify-DLI</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_recreation_hobbies_specify__c</fullName>
        <inlineHelpText>Are there any recreational activities or hobbies that you are involved in?
If ‘yes’ to above please give details</inlineHelpText>
        <label>If yes (recreation/hobbies) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_regular_income_from_where__c</fullName>
        <label>If yes(regular income) from where</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_relative_drugs_issues_specify__c</fullName>
        <inlineHelpText>Do any of your family members (including your spouse or partner) have difficulties with drugs or alcohol or have a history of addiction? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (relative drugs issues) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_religious_beliefs_specify__c</fullName>
        <inlineHelpText>Is there anything you think we need to know in relation to providing you a service that is keeping with your religious beliefs and practices? If &quot;yes&quot; please give details.</inlineHelpText>
        <label>If yes (religious beliefs) Specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_self_harmed_please_specify__c</fullName>
        <inlineHelpText>Have you ever deliberately self-harmed? If ‘yes’ can you give me more details?</inlineHelpText>
        <label>If yes (self-harmed) please specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_sexual_health_please_specify__c</fullName>
        <inlineHelpText>Have you any concerns about your sexual health?, If ‘yes’ to above please give details</inlineHelpText>
        <label>If yes (sexual health) please specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_specific_employment_Int_specify__c</fullName>
        <inlineHelpText>Do you have any specific employment interests or areas of employment that you would like to pursue? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (specific employment Int) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_warrants_charges_specify__c</fullName>
        <inlineHelpText>Do you have any outstanding warrants or charges? If ‘yes’ please give details:</inlineHelpText>
        <label>If yes (warrants/charges) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_what_benefits_do_you_receive__c</fullName>
        <label>If ‘yes’ what benefits do you receive</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_worked_in_the_past_specify__c</fullName>
        <inlineHelpText>Have you worked in the past?  If ‘yes’ please give details</inlineHelpText>
        <label>If yes (worked in the past) specify</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Income_Finance_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Income &amp; Finance-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Information_about_medical_history__c</fullName>
        <inlineHelpText>Is there any additional information about your current or past medical history that you think it would helpful for us to know about? (Refer to Initial Assessment)</inlineHelpText>
        <label>Information about medical history</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_advice_given_1__c</fullName>
        <label>Information/ advice  given 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_advice_given_2__c</fullName>
        <label>Information/ advice  given 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Information_advice_given_3__c</fullName>
        <label>Information/ advice  given 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_in_attending_edu_training__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Would you be interested in attending education or training?</inlineHelpText>
        <label>Interested in attending edu/training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interventions_recommended_1__c</fullName>
        <label>Interventions recommended 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interventions_recommended_2__c</fullName>
        <label>Interventions recommended 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interventions_recommended_3__c</fullName>
        <label>Interventions recommended 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Involved_agency_individual_assisting_LI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are you currently involved with an agency or individual who is assisting you with you legal issues? (E.g. solicitor, probation service/ officer, Citizen’s Advice Bureau)</inlineHelpText>
        <label>Involved agency/individual assisting LI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Involvement_in_hobbies_benefit_your_life__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you think that involvement in recreational activities or hobbies benefits, or would benefit, you and your life?</inlineHelpText>
        <label>Involvement in hobbies benefit your life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_this_person_aware_of_your_drug_use__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this person aware of your drug use/ contact with this service:</inlineHelpText>
        <label>Is this person aware of your drug use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Learning_difficulties_details__c</fullName>
        <label>Learning difficulties details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Issues_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Legal Issues-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Like_to_change_your_current_employment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Would you like to change your current employment situation?</inlineHelpText>
        <label>Like to change your current employment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Living_where_1__c</fullName>
        <inlineHelpText>Please give details of where you have lived</inlineHelpText>
        <label>Living where 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_where_2__c</fullName>
        <inlineHelpText>Please give details of where you have lived</inlineHelpText>
        <label>Living where 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_where_3__c</fullName>
        <inlineHelpText>Please give details of where you have lived</inlineHelpText>
        <label>Living where 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_with_whom_1__c</fullName>
        <label>Living with whom 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_with_whom_2__c</fullName>
        <label>Living with whom 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Living_with_whom_3__c</fullName>
        <label>Living with whom 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_area_that_you_want_to_change_now_1__c</fullName>
        <inlineHelpText>Can you identify the main areas (including your substance use) that you want to change now (3- 5areas)?</inlineHelpText>
        <label>Main area that you want to change now 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_area_that_you_want_to_change_now_2__c</fullName>
        <inlineHelpText>Can you identify the main areas (including your substance use) that you want to change now (3- 5areas)?</inlineHelpText>
        <label>Main area that you want to change now 2</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Main_area_that_you_want_to_change_now_3__c</fullName>
        <inlineHelpText>Can you identify the main areas (including your substance use) that you want to change now (3- 5areas)?</inlineHelpText>
        <label>Main area that you want to change now 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mental_Psychological_Emotional_Health_NI__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>NI = Need Identified. Please tick support area as appropriate</inlineHelpText>
        <label>Mental/Psychological/Emotional Health-NI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Client__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_difficult_for_you_in_making_changes__c</fullName>
        <inlineHelpText>What do you think will be most difficult for you in making these changes?</inlineHelpText>
        <label>Most difficult for you in making changes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_important_reasons_for_these_changes__c</fullName>
        <inlineHelpText>What are the most important reasons you want to make these changes?</inlineHelpText>
        <label>Most important reasons for these changes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_useful_about_alcohol_help_treatment__c</fullName>
        <inlineHelpText>What did you find most useful about this help/ treatment?</inlineHelpText>
        <label>Most useful about alcohol help/treatment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_useful_about_drug_help_treatment__c</fullName>
        <inlineHelpText>What did you find most useful about this help/ treatment?</inlineHelpText>
        <label>Most useful about drug help/treatment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Most_useful_about_this_help_treatment__c</fullName>
        <inlineHelpText>What do/ did you find most useful about this help/ treatment?</inlineHelpText>
        <label>Most useful about this help/ treatment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NOK_Address__c</fullName>
        <formula>Client__r.NOK_Address_if_different__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOK Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOK_Mobile__c</fullName>
        <formula>Client__r.eCASS02t1__Next_of_Kin_mobile_phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOK Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_1_person_you_currently_live_with__c</fullName>
        <inlineHelpText>Who do you currently live with? (Refer to Initial Assessment)</inlineHelpText>
        <label>Name 1 person you currently live with</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_2_person_you_currently_live_with__c</fullName>
        <inlineHelpText>Who do you currently live with? (Refer to Initial Assessment)</inlineHelpText>
        <label>Name 2 person you currently live with</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_3_person_you_currently_live_with__c</fullName>
        <inlineHelpText>Who do you currently live with? (Refer to Initial Assessment)</inlineHelpText>
        <label>Name 3 person you currently live with</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_GP__c</fullName>
        <label>Name of GP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_child_1__c</fullName>
        <label>Name of child 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_child_2__c</fullName>
        <label>Name of child 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_child_3__c</fullName>
        <label>Name of child 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_next_of_kin__c</fullName>
        <formula>Client__r.eCASS02t1__Next_of_Kin__r.eCASS02t1__Full_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of next of kin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Assistance_with_Children_details__c</fullName>
        <inlineHelpText>Do you think you need assistance from any service/agency to help with your children&apos;s health, welfare or development?  If yes please give details</inlineHelpText>
        <label>Need Assistance with Children details</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_mobile_number__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On mobile number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_medical_health_service_specify__c</fullName>
        <label>Other medical/health service, specify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>